--- a/src/book.tex
+++ b/src/book.tex
@@ -8,6 +8,11 @@
 \fi
 \usepackage[sfdefault]{roboto}   
 
+% Reserve bytes for the executable we write directly to the finished PDF.
+% This is done by the steps in ../notebooks/Add Executable To PDF.ipynb
+% We can't add the raw data of the binary here as it would confuse tex.
+\input{src/include_exe.tex}
+
 % Usage of /href
 % Disable decoration
 \ifx\forprint\undefined
